   `-s' option to get the old behavior.

** User-level Click can optionally dump the output of element read handlers
   into a directory (directory path specified using -d option) or stdout on a
   regular basis (duration specified by argument to ReadHandlerCaller element).

** Fixed FromBPF and ToBPF, finally. The fixed versions are called
   FromDevice and ToDevice.

* Kernel driver

** Added patch for Linux kernel 2.2.16. Linux kernel 2.2.16 patch contains the
   latest changes to Linux. While Click will continue to work under 2.2.14 for
   the time being, it may not be in the future.

** Cleaned up polling interface in Linux.

* Elements

** Fixed kernel alignment bug in IP header checking elements: can't use
   Linux's `fast_ip_csum' on unaligned data.

** Added QuitWatcher, FrontDropQueue, StripIPHeader, and IPClassifier.

** Fixed FromBPF and ToBPF bugs. Now FromDevice will not starve other
   router processing, and ToDevice works on Linux.

** Fixed FromLinux bug: now supports multiple instances of FromLinux for same
   device (this happens while installing a new configuration: initialize is
   called on the new FromLinux before the last FromLinux instance is
   uninitialized).

** Fixed ToLinux: now calls ptype_dispatch inside start_bh_atomic() and
   end_bh_atomic().

** Modified ToDevice: ToDevice now sends linux packets if device is idle. This
   prevents click from starving out packets sent by other processes or Linux.

** Radio elements are not compiled by default.

** Added new `elements/local' directory for your own elements. They are not
   compiled by default.

* Tools

** Fixed click-uncombine(1) bugs and changed its order of arguments.

** Added PollDevice and EtherEncap specifications to click-align(1).

** click-fastclassifier(1): Works on IPClassifier.


Version 1.0.6   6.May.2000

* Kernel driver

** Fixed kernel Packet::expensive_push. Patch by Richard Mortier
   <rmm1002@cam.ac.uk>.

** Added /proc/click/version.

* Elements
